[package]
name = "cgminer_monitor"
version = "0.1.0"
authors = ["wxLite <litekok@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0"
rayon = "1.2.0"
regex = "1.3.1"
csv = "1.1.1"
serde = "1.0.103"
serde_derive = "1.0.103"
chrono = "0.4.10"
